--- a/2019/V SESCOMP/V SESCOMP.tex
+++ b/2019/V SESCOMP/V SESCOMP.tex
@@ -63,7 +63,13 @@
 
 \begin{document}
     \logo{\includegraphics[height=.8cm]{../../ufc-qxd-hor-col.png} \hspace*{.3cm}}
-    \frame{\titlepage}
+    \frame{
+        \titlepage
+        \note{Apresentação pessoal}
+        \note[item]{Experiência acadêmica}
+        \note[item]{Experiência docente}
+        \note[item]{Interesses acadêmicos}
+    }
 
 
     \logo{\transparent{0.4}\includegraphics[height=.8cm]{../../ufc-qxd-hor-col.png} \hspace*{.3cm}}
@@ -72,9 +78,9 @@
 
     \end{frame}
 
-\section{Viagem no Tempo (segundo a física)}
+\section{Viagem no Tempo ---  segundo a física}
 
-\section{Viagem no Tempo (segundo a ficção)}
+\section{Viagem no Tempo ---  segundo a ficção (cinema)}
 
 \section{Estruturas de Dados Temporais}
 
@@ -103,17 +109,122 @@
             \end{itemize}
             \item Persistentes
             \begin{itemize}[<3->]
-                \item Todas as versões da estrutura estão disponíveis (com ressalvas) para manipulação.
+                \item Todas as versões da estrutura estão disponíveis para manipulação.
                 \item Atualizações em alguma versão {\em não se propagam} para as demais.
                 \note[item]{{\em Persistentes:} Se comportam em analogia à visão que a física tem sobre viagem no tempo.}
             \end{itemize}
             \item Retroativas
             \begin{itemize}[<4->]
-                \item Todas as versões da estrutura estão disponíveis (com ressalvas) para manipulação.
+                \item Todas as versões da estrutura estão disponíveis para manipulação.
                 \item Atualizações em alguma versão {\em sempre se propagam} para as demais.
                 \note[item]{{\em Retroativas:} Se comportam em analogia à visão que algumas obras de ficção tem sobre viagem no tempo.}
             \end{itemize}
         \end{itemize}
+    \end{frame}
+
+    \begin{frame}
+        \frametitle{Persistência {\em vs.} Retroatividade}
+        
+        \begin{block}{Persistência}
+            \centering
+            \includegraphics[width=.5\textwidth]{example-image}
+        \end{block}
+        
+        \begin{itemize}
+            \item Operações ganham um novo parâmetro: {\em a versão que será o seu alvo}.
+        \end{itemize}
+
+    \end{frame}
+
+    \begin{frame}
+        \frametitle{Persistência {\em vs.} Retroatividade}
+        
+        \begin{block}{Retroatividade}
+            \centering
+            \includegraphics[width=.5\textwidth]{example-image}
+        \end{block}
+        
+        \begin{itemize}
+            \item Operações ganham um novo parâmetro: {\em o ``momento'' onde serão realizadas}.
+        \end{itemize}
+
+    \end{frame}
+
+
+    \begin{frame}
+        \frametitle{Níveis de persistência}
+
+        \begin{block}{Persistência parcial}
+            \centering
+            \includegraphics[width=.5\textwidth]{example-image}
+        \end{block}
+
+        \begin{itemize}
+            \item<1-> Consultas podem ser feitas sobre {\em qualquer versão}.
+            \item<2-> Atualizações só podem ser feitas sobre {\em a versão mais recente}.
+            \begin{itemize}
+                \item<3-> Isso obriga uma distribuição totalmente ordenada das versões.
+            \end{itemize}
+        \end{itemize}
+
+        \note[item]{Corresponde à forma de percepção de tempo que temos hoje. Lembramos como as coisas eram no passado, mas não podemos alterá-las.}
+        \note[item]{De uma certa forma, seria como se só pudéssemos viajar ao passado para sermos ``expectadores''. Ou ainda, corresponderia às versões de ficção com fatos rígidos.}
+    \end{frame}
+
+    \begin{frame}
+        \frametitle{Níveis de persistência}
+
+        \begin{block}{Persistência total}
+            \centering
+            \includegraphics[width=.5\textwidth]{example-image}
+        \end{block}
+
+        \begin{itemize}
+            \item<1-> Consultas podem ser feitas sobre {\em qualquer versão}.
+            \item<2-> Atualizações podem ser feitas sobre {\em qualquer versão}.
+            \item<3-> Atualizações não afetam versões já existentes, o que obriga uma ``ramificação'' entre as versões.
+            \begin{itemize}
+                \item<4-> Isso obriga uma distribuição das versões como uma árvore.
+            \end{itemize}
+        \end{itemize}
+
+        \note[item]{Corresponde à forma de viagem no tempo de ``universos paralelos''.}
+    \end{frame}
+
+    \begin{frame}
+        \frametitle{Níveis de persistência}
+
+        \begin{block}{Persistência confluente}
+            \centering
+            \includegraphics[width=.5\textwidth]{example-image}
+        \end{block}
+
+        \begin{itemize}
+            \item Persistência total +
+            \item<2-> É possível ``mesclar'' duas ou mais versões em uma nova versão.
+        \end{itemize}
+
+        \note[item]{Difícil de imaginar um correspondente quanto a viagem no tempo.}
+        \note[item]{Parece haver uma série de televisão antiga que faz uso desse conceito: {\em Sliders}.}
+        \note[item]{Corresponde à forma como funcionam os sistemas de controle de versão.}
+    \end{frame}
+
+    \begin{frame}
+        \frametitle{Níveis de persistência}
+
+        \begin{block}{Persistência funcional}
+            \centering
+            \includegraphics[width=.5\textwidth]{example-image}
+        \end{block}
+
+        \begin{itemize}
+            \item \underline{Nada} pode ser alterado. Toda modificação deve preservar a memória anterior intacta.
+        \end{itemize}
+
+        \note[item]{Difícil de imaginar um correspondente quanto a viagem no tempo.}
+        \note[item]{Se inspira na forma de comportamento de linguagens funcionais.}
+        \note[item]{Se diferencia das demais, pois anteriormente poderíamos alterar parte da memória, desde que o acesso e a interpretação das versões anteriores fosse preservado.}
+        \note[item]{Inclui a capacidade de todas as anteriores, já que como nada é alterado, nada é perdido.}
     \end{frame}
 
 \section{Um último enredo a analisar}
