Separação em arquivos para facilitar escrita (SESCOMP)

--- a/2019/V SESCOMP/V SESCOMP.tex
+++ b/2019/V SESCOMP/V SESCOMP.tex
@@ -84,148 +84,7 @@
 
 \section{Estruturas de Dados Temporais}
 
-    \begin{frame}
-        \frametitle{Terminologia}
-
-        \begin{itemize}
-            \item Consultas {\em vs.} Atualizações
-            \note[item]{{\em Operações:} Todas as operações que podemos realizar numa estrutura realizam alguma tarefa que pode ser classificada entre \underline{obter uma informação} (obter a resposta a uma pergunta) ou \underline{realizar uma alteração na organização}.}
-            \note[item]{{\em Operações:} Existem certas operações que podem se comportar de ambas as formas, mas sempre podemos subdividí-las.}
-            \item Versão
-            \note[item]{{\em Versão:} Cada configuração (ou estado) de uma estrutura de dados após uma operação de Atualização.}
-        \end{itemize}
-    \end{frame}
-
-    \begin{frame}
-        \frametitle{Estruturas de Dados Temporais}
-
-        \begin{itemize}
-            \item Efêmeras
-            \begin{itemize}[<2->]
-                \item Apenas uma versão (a última) está disponível para manipulação.
-                \note[item]{{\em Efêmeras:} As estruturas que chamamos de ``Estruturas de Dados''.}
-                \note[item]{{\em Efêmeras:} Efêmero significa passageiro, que dura pouco. Qualquer estado da estrutura dura apenas até a próxima atualização.}
-                \note[item]{{\em Efêmeras:} Modelo de memória de um computador. Uma vez feito, não se sabe o que estava lá antes.}
-            \end{itemize}
-            \item Persistentes
-            \begin{itemize}[<3->]
-                \item Todas as versões da estrutura estão disponíveis para manipulação.
-                \item Atualizações em alguma versão {\em não se propagam} para as demais.
-                \note[item]{{\em Persistentes:} Se comportam em analogia à visão que a física tem sobre viagem no tempo.}
-            \end{itemize}
-            \item Retroativas
-            \begin{itemize}[<4->]
-                \item Todas as versões da estrutura estão disponíveis para manipulação.
-                \item Atualizações em alguma versão {\em sempre se propagam} para as demais.
-                \note[item]{{\em Retroativas:} Se comportam em analogia à visão que algumas obras de ficção tem sobre viagem no tempo.}
-            \end{itemize}
-        \end{itemize}
-    \end{frame}
-
-    \begin{frame}
-        \frametitle{Persistência {\em vs.} Retroatividade}
-        
-        \begin{block}{Persistência}
-            \centering
-            \includegraphics[width=.5\textwidth]{example-image}
-        \end{block}
-        
-        \begin{itemize}
-            \item Operações ganham um novo parâmetro: {\em a versão que será o seu alvo}.
-        \end{itemize}
-
-    \end{frame}
-
-    \begin{frame}
-        \frametitle{Persistência {\em vs.} Retroatividade}
-        
-        \begin{block}{Retroatividade}
-            \centering
-            \includegraphics[width=.5\textwidth]{example-image}
-        \end{block}
-        
-        \begin{itemize}
-            \item Operações ganham um novo parâmetro: {\em o ``momento'' onde serão realizadas}.
-        \end{itemize}
-
-    \end{frame}
-
-
-    \begin{frame}
-        \frametitle{Níveis de persistência}
-
-        \begin{block}{Persistência parcial}
-            \centering
-            \includegraphics[width=.5\textwidth]{example-image}
-        \end{block}
-
-        \begin{itemize}
-            \item<1-> Consultas podem ser feitas sobre {\em qualquer versão}.
-            \item<2-> Atualizações só podem ser feitas sobre {\em a versão mais recente}.
-            \begin{itemize}
-                \item<3-> Isso obriga uma distribuição totalmente ordenada das versões.
-            \end{itemize}
-        \end{itemize}
-
-        \note[item]{Corresponde à forma de percepção de tempo que temos hoje. Lembramos como as coisas eram no passado, mas não podemos alterá-las.}
-        \note[item]{De uma certa forma, seria como se só pudéssemos viajar ao passado para sermos ``expectadores''. Ou ainda, corresponderia às versões de ficção com fatos rígidos.}
-    \end{frame}
-
-    \begin{frame}
-        \frametitle{Níveis de persistência}
-
-        \begin{block}{Persistência total}
-            \centering
-            \includegraphics[width=.5\textwidth]{example-image}
-        \end{block}
-
-        \begin{itemize}
-            \item<1-> Consultas podem ser feitas sobre {\em qualquer versão}.
-            \item<2-> Atualizações podem ser feitas sobre {\em qualquer versão}.
-            \item<3-> Atualizações não afetam versões já existentes, o que obriga uma ``ramificação'' entre as versões.
-            \begin{itemize}
-                \item<4-> Isso obriga uma distribuição das versões como uma árvore.
-            \end{itemize}
-        \end{itemize}
-
-        \note[item]{Corresponde à forma de viagem no tempo de ``universos paralelos''.}
-    \end{frame}
-
-    \begin{frame}
-        \frametitle{Níveis de persistência}
-
-        \begin{block}{Persistência confluente}
-            \centering
-            \includegraphics[width=.5\textwidth]{example-image}
-        \end{block}
-
-        \begin{itemize}
-            \item Persistência total +
-            \item<2-> É possível ``mesclar'' duas ou mais versões em uma nova versão.
-        \end{itemize}
-
-        \note[item]{Difícil de imaginar um correspondente quanto a viagem no tempo.}
-        \note[item]{Parece haver uma série de televisão antiga que faz uso desse conceito: {\em Sliders}.}
-        \note[item]{Corresponde à forma como funcionam os sistemas de controle de versão.}
-    \end{frame}
-
-    \begin{frame}
-        \frametitle{Níveis de persistência}
-
-        \begin{block}{Persistência funcional}
-            \centering
-            \includegraphics[width=.5\textwidth]{example-image}
-        \end{block}
-
-        \begin{itemize}
-            \item \underline{Nada} pode ser alterado. Toda modificação deve preservar a memória anterior intacta.
-        \end{itemize}
-
-        \note[item]{Difícil de imaginar um correspondente quanto a viagem no tempo.}
-        \note[item]{Se inspira na forma de comportamento de linguagens funcionais.}
-        \note[item]{Se diferencia das demais, pois anteriormente poderíamos alterar parte da memória, desde que o acesso e a interpretação das versões anteriores fosse preservado.}
-        \note[item]{Inclui a capacidade de todas as anteriores, já que como nada é alterado, nada é perdido.}
-    \end{frame}
+    \input{persistencia-vs-retroatividade.tex}
 
 \section{Um último enredo a analisar}
 
