Separação (provavelmente completa) dos arquivos para apresentação.

--- a/2019/V SESCOMP/V SESCOMP.tex
+++ b/2019/V SESCOMP/V SESCOMP.tex
@@ -71,20 +71,39 @@
         \note[item]{Interesses acadêmicos}
     }
 
-
     \logo{\transparent{0.4}\includegraphics[height=.8cm]{../../ufc-qxd-hor-col.png} \hspace*{.3cm}}
     \begin{frame}
         \frametitle{Ressalvas}
-
+        
+        \begin{itemize}[<+->]
+            \item Duas palestras pelo preço de uma.
+            \begin{itemize}
+                \item Na verdade, um apanhado + uma visão geral
+            \end{itemize}
+            \item {\em Viagem no tempo}: não-especialista, não-estudioso, apenas um deslumbrado.
+            \item {\em Estruturas temporais}: não-especialista, mas entusiasta.
+            \begin{itemize}
+                \item Dar o pontapé inicial no estudo dessas estruturas
+                \item Como desculpa, falar sobre viagem no tempo
+            \end{itemize}
+        \end{itemize}
     \end{frame}
 
 \section{Viagem no Tempo ---  segundo a física}
 
+    \input{viagem-fisica.tex}
+
 \section{Viagem no Tempo ---  segundo a ficção (cinema)}
+
+    \input{viagem-ficcao.tex}
 
 \section{Estruturas de Dados Temporais}
 
     \input{persistencia-vs-retroatividade.tex}
+
+    \input{aplicabilidade-estruturas.tex}
+
+    \input{tornando-persistente.tex}
 
 \section{Um último enredo a analisar}
 
