V SESCOMP, epígrafe e referências.
- Adicionadas pausas para melhorar frase final.
- Adicionada referência ao vídeo ilustrando distrorção usando malha.

--- a/2019/V SESCOMP/V SESCOMP.tex
+++ b/2019/V SESCOMP/V SESCOMP.tex
@@ -115,7 +115,7 @@
         \setbeamercolor{normal text}{fg=black}
         \usebeamercolor[fg]{normal text}
         \begin{aquote}{???~\cite{abcd}}
-            Imagine um mundo onde viagem no tempo não exista, nem seja possível. Onde suas ações são imutáveis e você só tenha uma chance. E onde não existam reviravoltas para salvar o dia no final. {\bfseries O que você faria?}
+            Imagine um mundo onde viagem no tempo não exista, nem seja possível. \pause Onde suas ações são imutáveis e você só tenha uma chance. \pause E onde não existam reviravoltas para salvar o dia no final. \pause {\bfseries O que você faria?}
         \end{aquote}
     \end{frame}
     }
@@ -124,7 +124,8 @@
         \frametitle{Referências}
 
         \begin{thebibliography}{99}
-            \bibitem{abcd} (tradução livre). Disponível em \url{www.youtube.com}.
+            \bibitem{abcd} De: {\bfseries A take on time travel paradoxes} (em tradução livre). Disponível em \url{https://youtu.be/SZMFPR2Xr0Q}.
+            \bibitem{visual-gravidade} {\bf Gravity Visualized}. Disponível em \url{https://youtu.be/MTY1Kje0yLg}
         \end{thebibliography}
     \end{frame}
 \end{document}
