V SESCOMP. Viagem (Ficção).
- Consertado slide de categorias de filmes,
que incluía texto que não deveria.

--- a/2019/V SESCOMP/viagem-ficcao.tex
+++ b/2019/V SESCOMP/viagem-ficcao.tex
@@ -12,12 +12,12 @@
     \frametitle{Ideias gerais de enredo}
 
     \begin{itemize}
-        \item Reviver {\em , }
-        \item Predestinação {\em , , Vingadores: Ultimato (queria ser)}
-        \item Novos fluxos {\em , , , }
-        \item Novas linhas temporais {\em Vingadores: Ultimato (na verdade é)}
-        \item Consequências imediatas {\em Looper, De Volta para o Futuro}
-        \item Projeção de consciência {\em X-MEN: Dias de um Futuro Esquecido, Contra o tempo}
+        \item Reviver
+        \item Predestinação
+        \item Novos fluxos
+        \item Novas linhas temporais
+        \item Consequências imediatas
+        \item Projeção de consciência
     \end{itemize}
 \end{frame}
 
